# routes/index.js
@@ -3,5 +3,7 @@ const router = express.Router();
 
 router.use('/airlines', require('./airlines.r'));
 router.use('/destinations', require('./destinations.r'));
+router.use('/destinationPlans', require('./destinationPlans.r'));
+router.use('/clients', require('./clients.r'));
 
 module.exports = router;
